
  - It is possible now under OS/X to build ECL as a shared library and
    to compile and load code on the fly.

  - ECL now uses the configuration files of GMP to guess the best
    compilation/linking flags for a given architecture. This is required
    in platforms such as Solaris/Ultrasparc, where there are multiple
    ABIs (i.e. applications may use 32-bit or 64-pointers, 32-bit or
    64-registers, etc).

* System design: Multithreading

  - Almost all data specific to ECL has migrated into two structures:
    CL_ENV and CL_CORE. The first one contains stacks and other data
    that is specific to a process. The second one contains data common
    to the whole environment. CL_ENV is an actual variable in
    single-threaded ECL, and a pointer to a thread-local structure in
    a multi-threaded ECL.

  - The implementation of thread-local dynamic bindings uses hash
    tables to keep the value of the symbols.

  - The actual implementation uses POSIX threads under Linux. Ports to
    other operating systems are being worked out.

* System design: Debugging

  - The bytecodes interpreter now implements a barebones debugger, in
    which the facilities TRACE, STEP are available, and the content of
    local variables may be inspected and changed. To use the debugger,
    you must have activated the memoization of function definitions,
    by using (setf si::*keep-definitions* t). Sample session:
	> (defun foo (x) (print x)) (step (foo 2))
	FOO
	Top level.
	> (FOO 2) ->
	(PRINT X) - :v
	Block names: FOO.
	Local variables:
	  X: 2
	Broken at FOO.
	(PRINT X) - (setf x 3)
	3
	Broken at FOO.
	(PRINT X) - :v
	Block names: FOO.
	Local variables:
	  X: 3
	Broken at FOO.
	(PRINT X) -
	3
	3
	Top level.


* Errors fixed:

  - Bugs in the mechanism for automatically creating packages when
    loading binary files.

  - The value of LDFLAGS supplied at configuration time, was not used
    when building shared libraries or FASL files.
